# DC23_Akago

./: .editorconfig  .gitignore  README.md  analyze_pdf.py  camunda_worker.js  dane.md  docker-compose.yaml  extract_form_metadata.py  form.json  gdrive.py  gmail.py  main.py  package-lock.json  package.json  pyproject.toml
akago/: __init__.py  __main__.py  config.py  google.py  settings.py
akago/camunda/: camunda_rest_api.py  worker.js
akago/dependencies/: morfeusz.py  templates.py
akago/models/: form.py  metadata.py  request.py
akago/pdf/: document.py  metadata.py
akago/routers/: form.py  requests.py
data/: form_data.json  form_metadata.json
docker/: docker-compose.yaml
formularz/: form.html  logic.js  main.py  style.css
pdf_analyzer/: analyze.py  extract.py  transform.py  validate.py
pdf_resources/: AkagoForm.odt  AnalyzerDemo.py  FormMetadataExtractor.py  PDFAnalyzer.py
public/: form.js
static/: fa.css
templates/: augmentation_form.jinja  base.jinja  form.jinja  index.jinja  invalid_age.jinja  personal_data_form.jinja  request.jinja
