[project]
name = "dc23-akago"
version = "0.1.0"
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "fastapi[standard]>=0.115.4",
    "google-api-python-client>=2.149.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[tool.uv]
dev-dependencies = ["ruff>=0.7.1"]

[tool.ruff.lint]
extend-select = ["I"]
